# Janelia

./: README.md
FL_robot/: CHANGELOG.md  COMPLETE_USER_TUTORIAL.md  DISPENSER_REMOVAL_FIXES.md  ENHANCED_COLOR_MEASURER_GUIDE.md  FIRST_BOOT_GUIDE.md  GUI_IMPROVEMENTS.md  LINE_FOLLOWING_AND_PROGRESS_FIXES.md  LINE_FOLLOWING_ROBUSTNESS_FIXES.md  NEW_KTOM_FEATURES.md  PACKAGE_SUMMARY.md  README.md  SYNC_FIXES.md  camera_server.py  cleanup_robot.sh  color_measurer.py  find_camera_port.py  first_boot_pc.bat  first_boot_pc.sh  first_boot_robot.sh  force_cleanup.sh  force_update_robot.sh  hide_and_seek.py  hide_and_seek.pygit  hide_and_seek_bridge.py  ktom_experimenter.py  manage_robot_camera.py  pc_link.py  requirements.txt  setup_camera_server.bat  setup_camera_server.sh  start_hide_and_seek.sh  start_pc_link.sh  test_color_measurer.py  test_gui_fixes.py  test_integration.py  test_line_following_adjustments.py  test_line_following_fixes.py  test_new_functionality.py  test_robot_communication.py  test_robot_status_check.py  (+2 more)
Simulation/: .gitignore  README.md  SENSOR_CHARACTERIZATION_README.md  __init__.py  config.py  demo_improved_architecture.py  generate_maze.py  gui_test.py  main_scene.xml  map_visualizer.py  maze_builder.html  realistic_sensor_model.py  requirements.txt  robot.py  robot_data_collector.py  run_simple.py  sensor_characterization.py  sensor_characterization_workflow.py  simple_car.xml  simulate.py  (+5 more)
yahboomcar_ws/src/calibration_tools/: CMakeLists.txt  package.xml  setup.py
yahboomcar_ws/src/calibration_tools/calibration_tools/: calibration_camera.py
(+76 files in other folders)
