<?xml version="1.0"?>
<package format="3">
  <name>calibration_tools</name>
  <version>0.0.1</version>
  <description>Calibration tools for camera, LiDAR, IMU</description>
  <maintainer email="andy@example.com">andy</maintainer>
  <license>MIT</license>

  <!-- These are essential -->
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
